[GTK][WPE] WebGL support broken when there is no access to /dev/dri since GPU process was enabled by default at 301939@main https://bugs.webkit.org/show_bug.cgi?id=301923

Reviewed by Carlos Alberto Lopez Perez.

GBM and DMA-BUF support is required to run WebGL in the GPU process, so
we need to check that we can actually use the GPU process too.

Canonical link: https://commits.webkit.org/302579@main